--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
 
-  app-file-service:
+  cs-file-service:
     build:
       context: ../file-service
       dockerfile: ./docker/Dockerfile
@@ -21,6 +21,7 @@ services:
     networks:
       - ${NETWORK_NAME}
 
+
   db-file-service:
     image: postgres:12.4-alpine
     container_name: db-file-service
@@ -39,10 +40,11 @@ services:
     networks:
       - ${NETWORK_NAME}
 
+
   cloud-storage-minio:
     image: minio/minio:RELEASE.2023-03-09T23-16-13Z
-    container_name: cs-minio
-    hostname: cs-minio
+    container_name: cloud-storage-minio
+    hostname: cloud-storage-minio
     volumes:
       - ./minio/s3:/data
     ports:
@@ -56,6 +58,7 @@ services:
       ENV_VAR_NAME: ${COMPOSE_PROJECT_NAME}
     networks:
       - ${NETWORK_NAME}
+
 
 volumes:
   mpgdata:
