CS - added s3 configuration

--- a/file-service/docker/local-application.properties
+++ b/file-service/docker/local-application.properties
@@ -4,5 +4,4 @@ spring.profiles.active=local
 
 ##AWS
 aws.region=us-east-1
-aws.s3.fs.endpoint=http://cs-minio:9000/
-cs.aws.s3.bucket.name=tng-cs
+aws.s3.fs.endpoint=http://cloud-storage-minio:9000/
