--- a/file-service/src/main/resources/application-local.properties
+++ b/file-service/src/main/resources/application-local.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:postgresql://db-file-service:5440/file-service_db?stringtype=unspecified
+spring.datasource.url=jdbc:postgresql://localhost:5440/file-service_db?stringtype=unspecified
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
-##AWS
-aws.region=us-east-1
-s3.data.bucket=cs-dev
-aws.s3.fs.endpoint=https://s3.\${aws.region}.amazonaws.com
+##AWS (MINIO)
+aws.s3.fs.endpoint=http://localhost:9000/
+
+aws.access.key=dummy_key
+aws.secret.key=dummy_secret
