--- a/file-service/build.gradle
+++ b/file-service/build.gradle
@@ -28,8 +28,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "org.springdoc:springdoc-openapi-ui:${openapiVer}"
     implementation "org.openapitools:jackson-databind-nullable:${openapiJacksonVer}"
+    implementation platform("software.amazon.awssdk:bom:${awssdkVersion}")
+    implementation "software.amazon.awssdk:s3"
+    implementation "software.amazon.awssdk:apache-client"
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
+
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
