--- a/file-service/gradle.properties
+++ b/file-service/gradle.properties
@@ -3,7 +3,7 @@ springframeworkBootVersion=2.7.17
 springDependencyManagmentVersion=1.0.15.RELEASE
 freefairLombok=6.4.3
 openapiGeneratorVersion=6.6.0
-
+awssdkVersion=2.21.1
 # Dependencies' versions
 openapiVer=1.7.0
 openapiJacksonVer=0.2.6
