--- a/file-service/src/main/resources/server-api.yml
+++ b/file-service/src/main/resources/server-api.yml
@@ -28,4 +28,4 @@ paths:
           content:
             application/json:
               schema:
-                $ref: FileUploadDTO
+                $ref: FileMetaDTO
