--- a/file-service/docker/local-application.properties
+++ b/file-service/docker/local-application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://db-file-service:5440/file-service_db?stringtype=unspecified
+spring.datasource.url=jdbc:postgresql://db-cloud-storage:5440/cloud-storage_db?stringtype=unspecified
 logging.level.root = INFO
 spring.profiles.active=local
 
 ##AWS
 aws.region=us-east-1
 aws.s3.fs.endpoint=http://cloud-storage-minio:9000/
+
+aws.access.key=minio
+aws.secret.key=minio123
