--- a/file-service/src/main/resources/application-local.properties
+++ b/file-service/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5440/file-service_db?stringtype=unspecified
+spring.datasource.url=jdbc:postgresql://localhost:5440/cloud-storage_db?stringtype=unspecified
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
