--- a/notification-service/docker/local-application.properties
+++ b/notification-service/docker/local-application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://db-file-service:5440/file-service_db?stringtype=unspecified
+spring.datasource.url=jdbc:postgresql://db-cloud-storage:5440/cloud-storage_db?stringtype=unspecified
 logging.level.root = INFO
 spring.profiles.active=local
 
