--- a/file-service/src/main/resources/application.properties
+++ b/file-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 aws.region=us-east-1
 s3.data.bucket=cs-dev
 aws.s3.fs.endpoint=https://s3.\${aws.region}.amazonaws.com
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
