--- a/meta-service/build.gradle
+++ b/meta-service/build.gradle
@@ -1,11 +1,11 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.17'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'org.springframework.boot' version "${springframeworkBootVersion}"
+	id 'io.spring.dependency-management' version "${springDependencyManagmentVersion}"
 }
 
 group = 'edu.nau.cs.meta.service'
-version = '0.0.1-SNAPSHOT'
+version = 'undefined'
 
 java {
 	sourceCompatibility = '17'
@@ -22,13 +22,15 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation "org.springframework.boot:spring-boot-starter-actuator"
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-web"
+
+	compileOnly "org.projectlombok:lombok"
+	runtimeOnly "org.postgresql:postgresql"
+
+	annotationProcessor "org.projectlombok:lombok"
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
 }
 
 test {
