--- a/meta-service/src/main/resources/application.properties
+++ b/meta-service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:postgresql://db-cloud-storage:5440/cloud-storage_db?stringtype=unspecified
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-#drop n create table again, good for testing, comment this in production
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.defer-datasource-initialization=true
+
+spring.datasource.data=classpath:data.sql
