CS - fixed saving file

--- a/meta-service/docker/local-application.properties
+++ b/meta-service/docker/local-application.properties
@@ -1,3 +1,8 @@
+server.port=80
+
 spring.datasource.url=jdbc:postgresql://db-cloud-storage:5440/cloud-storage_db?stringtype=unspecified
 logging.level.root = INFO
 spring.profiles.active=local
+
+file.service.url.schema=http
+file.service.host=cs-file-service
