--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -26,3 +26,18 @@ management:
       show-details: always
     gateway:
       enabled: true
+
+security:
+  oauth2:
+    client:
+      registration:
+        gateway:
+          provider: spring
+          client-id: gateway
+          client-secret: secret
+          authorization-grant-type: authorization_code
+          redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+          scope: openid,resource.read
+      provider:
+        spring:
+          issuer-uri: http://localhost:9000
