--- a/file-service/docker/local-application.properties
+++ b/file-service/docker/local-application.properties
@@ -1,3 +1,5 @@
+server.port=80
+
 spring.datasource.url=jdbc:postgresql://db-cloud-storage:5440/cloud-storage_db?stringtype=unspecified
 logging.level.root = INFO
 spring.profiles.active=local
@@ -8,3 +10,6 @@ aws.s3.fs.endpoint=http://cloud-storage-minio:9000/
 
 aws.access.key=minio
 aws.secret.key=minio123
+
+meta.service.url.schema=http
+meta.service.host=cs-meta-service
