--- a/file-service/src/main/resources/application.properties
+++ b/file-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ aws.s3.fs.endpoint=https://s3.\${aws.region}.amazonaws.com
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+
+meta.service.url.schema=http
+meta.service.host=cs-meta-service
