--- a/meta-service/docker/local-application.properties
+++ b/meta-service/docker/local-application.properties
@@ -6,3 +6,8 @@ spring.profiles.active=local
 
 file.service.url.schema=http
 file.service.host=cs-file-service
+
+notification.updates.queue.name=cs-local-notification-message-queue
+
+aws.region=us-east-1
+aws.sqs.url=http://cs-localstack:4566
