--- a/notification-service/docker/local-application.properties
+++ b/notification-service/docker/local-application.properties
@@ -1,8 +1,10 @@
+server.port=80
+
 spring.datasource.url=jdbc:postgresql://db-cloud-storage:5440/cloud-storage_db?stringtype=unspecified
 logging.level.root = INFO
 spring.profiles.active=local
 
-##AWS
+notification.updates.queue.name=cs-local-notification-message-queue
+
 aws.region=us-east-1
-aws.s3.fs.endpoint=http://cs-minio:9000/
-cs.aws.s3.bucket.name=tng-cs
+aws.sqs.url=http://cs-localstack:4566
