--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -27,6 +27,13 @@ dependencies {
 
     implementation "org.springframework.cloud:spring-cloud-starter-gateway:4.0.0"
 
+//    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
+
+    implementation "io.jsonwebtoken:jjwt-api:0.11.1"
+    implementation 'org.projectlombok:lombok:1.18.28'
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.1"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.1"
+
     testImplementation platform("org.junit:junit-bom:5.9.1")
     testImplementation "org.junit.jupiter:junit-jupiter"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
