--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,21 +1,3 @@
-#spring:
-#  cloud:
-#    gateway:
-#      routes:
-#        - id: file-service-route
-#          uri: ${FILE_SERVICE_ROUTE_URI:http://localhost:8010}
-#          predicates:
-#            - Path=/file-service/**
-#          filters:
-#            - PrefixPath=/cs-api
-#            - AddResponseHeader=X-Powered-By, Cloud storage Gateway Service
-#        - id: meta-service-route
-#          uri: ${META_SERVICE_ROUTE_URI:http://localhost:8011}
-#          predicates:
-#            - Path=/meta-service/**
-#          filters:
-#            - PrefixPath=/cs-api
-#            - AddResponseHeader=X-Powered-By, Cloud storage Gateway Service
 management:
   endpoints:
     web:
@@ -27,17 +9,6 @@ management:
     gateway:
       enabled: true
 
-security:
-  oauth2:
-    client:
-      registration:
-        gateway:
-          provider: spring
-          client-id: gateway
-          client-secret: secret
-          authorization-grant-type: authorization_code
-          redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-          scope: openid,resource.read
-      provider:
-        spring:
-          issuer-uri: http://localhost:9000
+
+jwt:
+  secret: MiAVzqUXy5Tfr1kVIGpPMiAVzqUXy5Tfr1kVIGpP
