--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -26,11 +26,16 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:${springAuthServerVersion}"
 
+    implementation "io.jsonwebtoken:jjwt-api:0.11.1"
+
+    compileOnly "org.projectlombok:lombok"
+
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.1"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.1"
+
     testImplementation platform("org.junit:junit-bom:5.9.1")
     testImplementation "org.junit.jupiter:junit-jupiter"
 
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation "org.springframework.security:spring-security-test"
 }
 
 test {
